MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 0.4.4
* added "rendererType" attribute to tag library for all components.
* added RadioRenderer & selectone_radio tag (see carconfigurator example)

----------------------------------------------------------------------
Changes in Release 0.4.3
* fixed a bug in the navigation menu: open/active state was lost sometimes.
* removed Attribute levelClasses from NavigationTag - see NavigationRenderer.indent(...)
* Replaced usages of ObjectInputStream by the new derived class
  MyFacesObjectInputStream to finally fix the JBoss Class.forName issue
  --> MyFaces now works in JBoss 3.2.1 (thanks to Robert Gothan!)
* TextRenderer: empty <span> element (span without attributes) is not rendered anymore
* New configuration option "defaultLanguage" in MyFacesConfig
* New Renderer "TabbedPane" that renderes a swing-like tabbed Pane (see examples).
* Rudimentary support for <jsp:include>. See known issues for details.
* fixed bug in ListRenderer: there was a bug when calculating actualRow

----------------------------------------------------------------------
Changes in Release 0.4.2
* Simple EL Support: For Tags derived from MyFacesTag you can use "${expr}"
  Syntax. The given expr is evaluated via ValueBinding.
* Dynamic validators (i.e. validators added during runtime) are now supported
  by MinimizingStateSaver.
* getValidator() in ApplicationImpl returned always the same validator
  instance: fixed.
* Support for converter attributes "dateStyle", "formatPattern", etc.
* added Attribute activeItemClass to NavigationTag
* refurbished navigation menu in examples application
* replaced all usages of Class.forName(s) by Class.forName(s, true,
  Thread.currentThread().getContextClassLoader()) to (hopefully) resolve the
  JBoss issues

----------------------------------------------------------------------
Changes in Release 0.4.1